- new parameter "ndomredsfound" of SCIPpropagateProbing()

plugins:
- new primal heuristic "rens"
- new primal heuristic "mutation"
- slightly modified crossover and rins heuristics
- improved presolving of and, or, and xor constraints
- improved performance of intdiving heuristic
- new primal heuristic "veclendiving"

parameters:
- new parameter "reading/zplreader/changedir" to control behavior of path switching of ZIMPL file reader
- new parameter "reading/zplreader/parameters" to pass additional parameters to ZIMPL
- new parameter "propagating/abortoncutoff"

features:
- primal heuristics that run before the node is solved now know already whether the LP will be solved at the current node
  or not
- command shell now understands escape characters ",', and \ which makes it possible to read in files with spaces in
  the name
- updated XPress interface to XPress-MP 17 (contributed by Michael Perregard)

fixed bugs:
- fixed bug with adding constraints with INITIAL=true and separating them afterwards, which lead to a second addition
  of the constraint's relaxation in the child node
- fixed bug in cmir cut separator, that 8*delta was not tried
- fixed bug in cmir cut separator with wrong sign of slack in row score function
- fixed bug with string pointer copy instead of string content duplication in constructors of C++ wrapper classes
- fixed bug in CPLEX interface with basis access methods that dualopt has to be called for more error status codes
- fixed bug with inserting two variable bounds of the same type on the same variable with the same bounding variable
  but with different sign of coefficient (e.g., x <= 10*z + 5 and x <= -5*z + 10); in previous version, one of the
  two was removed, although both have a useful meaning; now, we keep both, and detect a stronger global bound in
  the implication graph presolving
- fixed bug in cmir cut separator with weights fixed to zero, thus making the current aggregation invalid


SCIP version 0.82
=================
